--- a/dev_android_crie_18_apps/Organizze/app/src/main/res/layout/intro_cadastro.xml
+++ b/dev_android_crie_18_apps/Organizze/app/src/main/res/layout/intro_cadastro.xml
@@ -34,12 +34,18 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
         android:onClick="btCadastrar"
         android:text="Cadastre-se"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
