--- a/dev_android_crie_18_apps/Organizze/app/src/main/res/layout/content_principal.xml
+++ b/dev_android_crie_18_apps/Organizze/app/src/main/res/layout/content_principal.xml
@@ -61,6 +61,7 @@
         app:mcv_tileSize="50dp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMovimentos"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
