--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_login.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/digite_email"
@@ -53,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editLoginSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/digite_senha"
@@ -69,6 +71,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="validarAutenticacaoUsuario"
         android:text="@string/button_logar"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/textView"
