--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/toolbar.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/toolbar.xml
@@ -8,7 +8,6 @@
         android:id="@+id/toolbarPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:background="@color/colorPrimary"
+        android:theme="@style/Toolbar" />
 </FrameLayout>
