--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/circleImageViewFotoPerfil">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/editPerfilNome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
