--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
@@ -59,7 +59,7 @@
             android:inputType="textPersonName" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageAtualizarNome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
